# ChangeLog for kde-misc/zanshin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/zanshin/ChangeLog,v 1.4 2012/01/10 13:44:50 johu Exp $

*zanshin-0.2.0 (10 Jan 2012)

  10 Jan 2012; Johannes Huber <johu@gentoo.org> +zanshin-0.2.0.ebuild,
  -zanshin-0.1.82.ebuild, -zanshin-0.1.91.ebuild:
  Version bump, remove old.

*zanshin-0.1.91 (16 Oct 2011)

  16 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -zanshin-0.1.81.ebuild, +zanshin-0.1.91.ebuild:
  Version bump; remove old

*zanshin-0.1.82 (01 Sep 2011)

  01 Sep 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +zanshin-0.1.82.ebuild:
  Version bump

*zanshin-0.1.81 (12 Aug 2011)

  12 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +zanshin-0.1.81.ebuild, +metadata.xml:
  New application, bug 373135. Thanks to Matija "hook" Šuklje for the initial
  ebuild.
