@@ -2,17 +2,19 @@
 Hash: SHA512
 
 DIST zanshin-0.2.0.tar.bz2 141825 RMD160 4328db11c78ee287eb474ef0a04f7e0784b85634 SHA1 b2b0336f70383d9e9c4a6c280b29e31d46150ece SHA256 07c9f4a69c6db372bb594eb1f67b4bdcaf431f1510f0cefd2f9d2f22339a534f
+DIST zanshin-0.2.1.tar.bz2 142281 RMD160 d34241f8f72de73f8aa07e9530b33a7e38f9bdde SHA1 cff58d31339f2cdb19f0e8c11ec746a9f92640f9 SHA256 dd9592750b793118dc6de46ebed8b76a9e00b0f193c2963ab880cf33b738b394
 EBUILD zanshin-0.2.0.ebuild 540 RMD160 aed1d95b175fce99da5b7691e2213366bff0c0d0 SHA1 68ce8db42cb1161a3fbb6d2d3bdbd8800789be28 SHA256 767bb878b46f8945f9df13f7ef4db4a208d3971b83fb498065cdb92b73cd2d39
-MISC ChangeLog 898 RMD160 186c8334af09c68e9b87b431ba09e1d50ef97825 SHA1 46ac7aaa9859a57221028ce1fb1b18cfd0ff6ca3 SHA256 1ae7ad7f1f7862100661849f906a1a88ea0d992fe1fc994e80c145713074f357
+EBUILD zanshin-0.2.1.ebuild 540 RMD160 e39258ec0396ea7c9f8d6dc7093ddb8b6081f09f SHA1 492a7dc9169a0941df738386f9da666569e0a56e SHA256 55895d2bbd508c456cb142ff64816f0ea486426714fd6b9643a74101c262dfc9
+MISC ChangeLog 1016 RMD160 4c50d7688f42ca3ec4de775ed30a4ee0e2250ad2 SHA1 8d7dbb609b28aa874868ec230b514aa7ad85b5fa SHA256 0ce94dbcb82e17f88ad1e9495c81d31ef60c7ea25d6a38f3aa1a645926098ed6
 MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPDECvAAoJEO+t9ga+3I3a3ZQIAMS6y8S3E6XNBYaq17oZJ72v
-IfWzadu9Zva9uXDpVrFCZxLvegNqZM+7e3VOvQWNmhIcBY3vACdD5DbRWGlsrWCx
-yYsuD1ntfnIV8uS/Pn5WVhXECecR7/TrsPCS3/UcjH6gTejNU1bYRUAmR2cw/TRc
-fFJ/BQWllkn6A2UgCN13vasxh+M31cw7lDD3BZ4VB3rsx+qJU2Ls+zourWmRU3II
-HS8RQcVejH2CNqVCMAyvxKM/xWhI860O8SAvxhA8DJXiLJ/i2E3GUONpIJ4M1T14
-4gRAumi0zVMStpm5LEQzmBVoVEw51SPao9UsN/JmbMTFJPDPGOPvOhS1qWMaLi8=
-=ImQB
+iQEcBAEBCgAGBQJPTOJ/AAoJEO+t9ga+3I3afusIAMZbeJOSHBUsGz9RrO4xADCf
+5uvKZItW17IczryrAPcoNL5utIzUMyJrNVg8T9i3RlWMVCRLcNmCOwgkEkuiGZrr
+v3AA3AbgTAB24a40Ot4HD255rwizGheUIF5wpFPMyaWdFL7TEEqmE1eeZl/pLwGC
+4DHSiVtxXqxGKG4NSTHWHDHakdIiwbxPTJxpGU0YDQ4VcIVUkgAiyW4/xk+PfMZI
+ulseAQ4JsSgPVv8mkiTMA9a9kVb3fEL8IsdypOdMMAka5vpGvmtAhNxMywluPpib
+kCV6/kkEZKx0rotJl53pw5cfGkDn3B2H0bcKGyyKNSvj06Wgr+sv2o0im3eX6NQ=
+=QqRY
 -----END PGP SIGNATURE-----
